# Fyrox

./: .Cargo.toml.un~  .gitattributes  .gitignore  3  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  BSQM-MODULES-GENESIS-V1.0.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FYROX_UI_VULKAN_COMPATIBILITY.md  HOST - the-quantum-vault.ctb.txt  LICENSE.md  PLUGIN - genesis-engine-manual.txt  PLUGIN - quantum-composer-powered-by-quantum-quill.txt  PLUGIN - quantum_chorus_full_spec.txt  README.md  The Genesis Engine Master Registry of 224 Core Atoms.txt  VULKAN_BACKEND_FIX_SUMMARY.md  VULKAN_CRASH_FIX.md  VULKAN_FIX_STATUS.md  VULKAN_SHADER_MIGRATION.md  VULKAN_SHADER_QUICK_REFERENCE.md  VULKAN_TESTING.md  VULKAN_UI_INTEGRATION_STATUS.md  WORLD - NEON-SHADOW-RESONANCE_NSR-202410-001 .txt  biospheres-universe-generator.txt  ci.yml  expanded.rs  flake.nix  issue.txt  my-earth.qgenesis  quantum-mind-full.txt  run_test_with_coverage.sh  save.json  save.txt  src.rar  test.json  test.txt  unnamed.rgs
editor/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
editor-automated-tests/: Cargo.toml
editor-automated-tests/src/: main.rs
editor-standalone/: Cargo.toml  README.md
editor-standalone/src/: main.rs
editor/os-installation/: general-description.txt
editor/os-installation/linux/: rusty-editor.desktop
editor/resources/: README.md
editor/resources/lib/: release.toml
editor/resources/shaders/: gizmo.shader  grid.shader  highlight.shader  overlay.shader  overlay_vs.glsl  sprite_gizmo.shader
editor/src/: asset.rs  audio.rs  build.rs  camera.rs  configurator.rs  curve_editor.rs  export.rs  gui.rs  highlight.rs  lib.rs  light.rs  log.rs  main.rs  material.rs  mesh.rs  message.rs  overlay.rs  particle.rs  physics.rs  plugin.rs  preview.rs  project_dirs.rs  scene_viewer.rs  stats.rs
editor/src/absm/: blendspace.rs  canvas.rs  command.rs  connection.rs  document.rs  menu.rs  message.rs  mod.rs  node.rs  (+9 more)
fyrox/: Cargo.toml
fyrox-animation/: Cargo.toml  LICENSE  README.md
fyrox-animation/src/: container.rs  lib.rs  pose.rs  signal.rs  track.rs  value.rs
fyrox-autotile/: Cargo.toml  README.md
fyrox-autotile/src/: auto.rs  lib.rs  wave.rs
fyrox-biosphere/: Cargo.toml
fyrox-biosphere/src/: lib.rs
fyrox-build-tools/: Cargo.toml
fyrox-build-tools-cli/: Cargo.toml  README.md
fyrox-build-tools-cli/src/: main.rs
fyrox-build-tools/src/: build.rs  lib.rs
fyrox-core/: .gitignore  Cargo.toml  README.md
fyrox-core-derive/: Cargo.toml  README.md
fyrox-core-derive/src/: component.rs  derived.rs  inherit.rs  inspect.rs  lib.rs  reflect.rs  script.rs  script_message_payload.rs  uuid.rs  visit.rs
fyrox-core/src/: color.rs  color_gradient.rs  curve.rs  dyntype.rs  early.rs  inspect.rs  io.rs  lib.rs  log.rs  net.rs  numeric_range.rs  octree.rs  platform.rs  pool.rs  profiler.rs  quadtree.rs  rectpack.rs  reflect.rs  safelock.rs  script.rs  sparse.rs  sstorage.rs  task.rs  type_traits.rs  variable.rs  visitor.rs  watcher.rs
fyrox-dylib/: Cargo.toml  README.md
fyrox-dylib/src/: lib.rs
fyrox-graph/: Cargo.toml
fyrox-graph/src/: constructor.rs  lib.rs
fyrox-graphics/: Cargo.toml
fyrox-graphics-gl/: Cargo.toml
fyrox-graphics-gl/src/: buffer.rs  framebuffer.rs  geometry_buffer.rs  lib.rs  program.rs  query.rs  read_buffer.rs  sampler.rs  server.rs  texture.rs
fyrox-graphics-vk/: Cargo.toml  SHADER_PROCESSING_EXAMPLE.rs  SHADER_PROCESSING_TEST.md  errors.txt
fyrox-graphics-vk/src/: buffer.rs  command.rs  device.rs  framebuffer.rs  geometry_buffer.rs  instance.rs  lib.rs  memory.rs  program.rs  query.rs  read_buffer.rs  sampler.rs  server.rs  swapchain.rs  texture.rs
fyrox-graphics/src/: buffer.rs  error.rs  framebuffer.rs  geometry_buffer.rs  gpu_program.rs  gpu_texture.rs  lib.rs  pixel_buffer.rs  query.rs  read_buffer.rs  sampler.rs  server.rs  state.rs  stats.rs  uniform.rs  uniform_buffer.rs
fyrox-impl/: Cargo.toml  README.md
fyrox-impl/src/: lib.rs
fyrox-impl/test_output/: behavior_save_load.txt  derived.rgs  derived2.rgs  root.rgs  root2.rgs
fyrox-material/: Cargo.toml
fyrox-material/src/: lib.rs  loader.rs
fyrox-math/: Cargo.toml
fyrox-math/src/: aabb.rs  curve.rs  frustum.rs  interpolation.rs  lib.rs  octree.rs  plane.rs  ray.rs  segment.rs  triangulator.rs
fyrox-prefab/: Cargo.toml
fyrox-prefab/src/: lib.rs
fyrox-reflect/: Cargo.toml
fyrox-reflect/macros/: Cargo.toml
fyrox-reflect/src/: external_impls.rs  lib.rs  std_impls.rs  variable.rs
fyrox-resource/: .gitignore  Cargo.toml
fyrox-resource/src/: builtin.rs  constructor.rs  entry.rs  event.rs  graph.rs  io.rs  lib.rs  loader.rs  manager.rs  metadata.rs  options.rs  registry.rs  state.rs  task.rs  untyped.rs
fyrox-resource/tests/: registry.rs
fyrox-scripts/: Cargo.toml
fyrox-scripts/src/: camera.rs  lib.rs
fyrox-sound/: Cargo.toml  README.md
fyrox-sound/examples/: hrtf.rs  listener.rs  play_sound.rs  play_spatial_sound.rs  raw_samples.rs  raw_streaming.rs  reverb.rs  streaming.rs  write_wav.rs
fyrox-sound/src/: bus.rs  context.rs  engine.rs  error.rs  lib.rs  listener.rs  source.rs
fyrox-texture/: Cargo.toml
fyrox-texture/src/: lib.rs  loader.rs  sampler.rs
fyrox-ui/: .gitignore  Cargo.toml  README.md
fyrox-ui/src/: absm.rs  alignment.rs  animation.rs  bbcode.rs  bit.rs  border.rs  brush.rs  build.rs  button.rs  canvas.rs  check_box.rs  color.rs  control.rs  decorator.rs  dock.rs  draw.rs  dropdown_list.rs  dropdown_menu.rs  expander.rs  file_browser.rs  formatted_text.rs  grid.rs  image.rs  input.rs  key.rs  lib.rs  list_view.rs  loader.rs  log.rs  matrix.rs  matrix2.rs  menu.rs  message.rs  messagebox.rs  navigation.rs  nine_patch.rs  node.rs  numeric.rs  path.rs  popup.rs  (+26 more)
fyrox/src/: lib.rs
project-manager/: Cargo.toml  build.rs  pm.version
project-manager/src/: build.rs  main.rs  manager.rs  project.rs  settings.rs  upgrade.rs  utils.rs
qgenesis-tool/: Cargo.toml
qgenesis-tool/src/: main.rs
rg3d-core-derive/: Cargo.toml  README.md
rg3d-core-derive/src/: inspect.rs  lib.rs  visit.rs
rg3d-core-derive/tests/: basic.rs  compat.rs  utils.rs
(+2315 files in other folders)
