[package]
name = "editor-automated-tests"
version = "1.0.0-rc.1"
license = "MIT"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
rust-version = "1.87"
homepage = "https://github.com/FyroxEngine/Fyrox"
keywords = ["fyrox", "editor", "rust"]
repository = "https://github.com/FyroxEngine/Fyrox"

[dependencies]
fyrox = { version = "1.0.0-rc.1", path = "../fyrox" }
fyroxed_base = { version = "1.0.0-rc.1", path = "../editor" }
