[package]
name = "fyroxed"
version = "1.0.0-rc.1"
license = "MIT"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
rust-version = "1.86"
description = "A standalone scene editor for Fyrox game engine"
homepage = "https://github.com/FyroxEngine/Fyrox"
keywords = ["fyrox", "editor", "rust"]
repository = "https://github.com/FyroxEngine/Fyrox"
readme = "README.md"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[dependencies]
fyrox = { version = "1.0.0-rc.1", path = "../fyrox", features = ["vulkan"]}
fyroxed_base = { version = "1.0.0-rc.1", path = "../editor" }
clap = { version = "4", features = ["derive"] }
