[package]
name = "fyroxed_base"
license = "MIT"
version = "0.36.2"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
rust-version = "1.86"
description = "A scene editor for Fyrox game engine"
homepage = "https://github.com/FyroxEngine/Fyrox"
keywords = ["fyrox", "editor", "rust"]
repository = "https://github.com/FyroxEngine/Fyrox"
readme = "README.md"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md", "/resources/**/*"]

[dependencies]
fyrox = { version = "0.36.2", path = "../fyrox", default-features = false }
fyrox-build-tools = { version = "0.36.2", path = "../fyrox-build-tools" }
lazy_static = "1.4.0"
ron = "0.8.0"
serde = "^1.0.0"
toml = { version = "0.8.10", default-features = false, features = ["parse"] }
toml_edit = "0.22.6"
strum = "0.26.1"
strum_macros = "0.26.1"
open = "5"
rust-fuzzy-search = "0.1.1"
cargo_metadata = "0.19"
serde_json = "1.0.113"
image = { version = "0.25.1", default-features = false, features = ["gif", "jpeg", "png", "tga", "tiff", "bmp"] }
imageproc = "0.25.0"
notify = "8"

[features]
default = ["fyrox/default"]
dylib_engine = ["fyrox/dylib"]
