[package]
name = "fyrox-animation"
version = "0.36.2"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Flexible Animation System"
keywords = ["animation", "game"]
categories = ["game-development", "graphics"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-animation"
repository = "https://github.com/FyroxEngine/Fyrox"
readme = "README.md"
rust-version = "1.86"

[dependencies]
fyrox-core = { version = "0.36.2", path = "../fyrox-core" }
fyrox-resource = { version = "0.36.2", path = "../fyrox-resource" }
strum = "0.26.1"
strum_macros = "0.26.1"
fxhash = "0.2.1"
spade = "2.1.0"