[package]
name = "fyrox-biosphere"
version = "0.1.0"
edition = "2021"
description = "BioSpark Quantum Genesis ecosystem architecture for Fyrox"
license = "MIT"

[dependencies]
fyrox-core = { path = "../fyrox-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
