[package]
name = "fyrox-graph"
version = "0.36.2"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Graph management crate for the Fyrox engine"
keywords = ["graph", "prefab"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-graph"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.86"

[dependencies]
fyrox-core = { path = "../fyrox-core", version = "0.36.2" }
fyrox-resource = { path = "../fyrox-resource", version = "0.36.2" }
fxhash = "0.2.1"