[package]
name = "fyrox-graphics-gl"
version = "0.36.0"
edition = "2021"
license = "MIT"
description = "OpenGL-based graphics server for Fyrox Game Engine"
keywords = ["graphics", "gapi"]
categories = ["graphics", "rendering::graphics-api"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-graphics-gl"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.86"

[dependencies]
winit = { version = "0.29.2", features = ["serde"] }
fyrox-graphics = { version = "0.36", path = "../fyrox-graphics" }
fyrox-core = { version = "0.36", path = "../fyrox-core" }
fxhash = "0.2.1"
regex = "1"
glow = "0.16"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.31"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.3"