[package]
name = "fyrox-graphics-gl"
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT"
description = "OpenGL-based graphics server for Fyrox Game Engine"
keywords = ["graphics", "gapi"]
categories = ["graphics", "rendering::graphics-api"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-graphics-gl"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.86"

[dependencies]
winit = { version = "0.30", features = ["serde"] }
fyrox-graphics = { version = "1.0.0-rc.1", path = "../fyrox-graphics" }
fyrox-core = { version = "1.0.0-rc.1", path = "../fyrox-core" }
fxhash = "0.2.1"
regex = "1"
glow = "0.16"
serde = { version = "1.0.215", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.3"