[package]
name = "fyrox-graphics-gl"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "OpenGL-based graphics server for Fyrox Game Engine"
keywords = ["graphics", "gapi"]
categories = ["graphics", "rendering::graphics-api"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-graphics-gl"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.87"

[dependencies]
winit = { version = "0.30", features = ["serde"] }
fyrox-graphics = { version = "1.0.0", path = "../fyrox-graphics" }
fyrox-core = { version = "1.0.0", path = "../fyrox-core" }
fxhash = "0.2.1"
regex = "1"
# TODO: Migrate to crates.io version once 0.17 is released. 0.16 does not have a fix for this bug
# https://github.com/grovesNL/glow/pull/348 which ruins 3D textures on WebAssembly.
glow = { git = "https://github.com/grovesNL/glow", rev = "d645b97f1e26bb1a79b73f77c1c29312cdeca5c2" }
serde = { version = "1.0.215", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.3"