[package]
name = "fyrox-graphics"
version = "0.36.2"
edition = "2021"
license = "MIT"
description = "Graphics API abstraction for Fyrox Game Engine"
keywords = ["graphics", "gapi"]
categories = ["graphics", "rendering::graphics-api"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-graphics"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.86"

[dependencies]
fyrox-core = { path = "../fyrox-core", version = "0.36.2", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"
bytemuck = { version = "1.16.1", features = ["derive"] }