[package]
name = "fyrox-graphics"
version = "1.0.0-rc.2"
edition = "2021"
license = "MIT"
description = "Graphics API abstraction for Fyrox Game Engine"
keywords = ["graphics", "gapi"]
categories = ["graphics", "rendering::graphics-api"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-graphics"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.87"

[dependencies]
fyrox-core = { path = "../fyrox-core", version = "1.0.0-rc.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
bytemuck = { version = "1.23.2", features = ["derive"] }