[package]
name = "fyrox-impl"
version = "0.36.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>", "Fyrox Engine Contributors"]
edition = "2021"
license = "MIT"
description = "Feature-rich, easy-to-use, 2D/3D game engine with a scene editor. Like Godot, but in Rust."
keywords = ["sound", "game", "engine", "3d", "gui"]
categories = ["game-engines", "graphics", "gui", "rendering", "wasm"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox"
repository = "https://github.com/FyroxEngine/Fyrox"
readme = "README.md"
rust-version = "1.80"

[dependencies]
fyrox-core-derive = { path = "../fyrox-core-derive", version = "0.36.0" }
fyrox-core = { path = "../fyrox-core", version = "0.36.0", features = ["serde"] }
fyrox-sound = { path = "../fyrox-sound", version = "0.36.0" }
fyrox-ui = { path = "../fyrox-ui", version = "0.36.0" }
fyrox-resource = { path = "../fyrox-resource", version = "0.36.0" }
fyrox-animation = { path = "../fyrox-animation", version = "0.36.0" }
fyrox-graph = { path = "../fyrox-graph", version = "0.36.0" }
fyrox-graphics = { path = "../fyrox-graphics", version = "0.36.0" }
fyrox-texture = { path = "../fyrox-texture", version = "0.36.0" }
rapier2d = { version = "0.23", features = ["debug-render"] }
rapier3d = { version = "0.23", features = ["debug-render"] }
image = { version = "0.25.1", default-features = false, features = ["gif", "jpeg", "png", "tga", "tiff", "bmp"] }
inflate = "0.4.5"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.5.1"
bitflags = "2.2.1"
walkdir = "2.3.2"
ron = "0.8.0"
fxhash = "0.2.1"
strum = "0.26.1"
strum_macros = "0.26.1"
clap = { version = "4", features = ["derive"] }
winit = { version = "0.29.2", features = ["serde"] }
half = { version = "2.2.1", features = ["bytemuck"] }
base64 = "0.22.1"
uvgen = "0.2.0"
lightmap = "0.2"
libloading = "0.8.1"
gltf = { version = "1.4.0", optional = true, default-features = false, features = ["names", "utils"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
# These dependencies isn't actually used by the engine, but it is needed to prevent cargo from rebuilding
# the engine lib on different packages.
hashbrown = { version = "0.14.3", features = ["raw"] }
imageproc = "0.25.0"

[features]
enable_profiler = ["fyrox-core/enable_profiler"]
gltf_blend_shapes = ["gltf", "gltf/extras"]
mesh_analysis = []

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.29.2", features = ["android-native-activity"] }
